# node-based-image-processor

./: CMakeLists.txt  README.md
include/: BrightnessContrastNode.h  ColorSplitterNode.h  Connection.h  Graph.h  ImageInputNode.h  ImageInputNode.h.save.1  MainWindow.h  Node.h  NodeBox.h  NodeBox.h.save  OutputNode.h
src/: BlendNode.cpp  BlendNode.h  BlurNode.cpp  BlurNode.h  BrightnessContrastNode.cpp  BrightnessContrastNode.h  ColorChannelSplitterNode.cpp  ColorChannelSplitterNode.h  ColorSplitterNode.cpp  Connection.cpp  Connection.cpp.save  ConvolutionNode.cpp  ConvolutionNode.h  EdgeDetectionNode.cpp  EdgeDetectionNode.h  Graph.cpp  ImageInputNode.cpp  ImageProcessor.cpp  ImageProcessor.h  MainWindow.cpp  Node.cpp  NodeBox.cpp  NodeEditor.cpp  NodeEditor.h  Nodes.cpp  Nodes.h  NoiseNode.cpp  NoiseNode.h  OutputNode.cpp  OutputNode.h  ThresholdNode.cpp  ThresholdNode.h  main.cpp
